tests/should_fail/318.jp

a := array {};

fn f() {
	return a;
};

fn __invoke() {

	array_append(f(), 10);
	array_append(f(), "a");
	print(f());
};
